--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -1,3 +1,5 @@
+CONFIG_LOCALVERSION="-IllusionX"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -103,7 +105,6 @@ CONFIG_CFI_CLANG=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODVERSIONS=y
-CONFIG_MODULE_SCMVERSION=y
 CONFIG_MODULE_SIG=y
 CONFIG_MODULE_SIG_PROTECT=y
 CONFIG_BLK_CGROUP_IOCOST=y
