--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -127,6 +127,7 @@ CONFIG_CMA=y
 CONFIG_CMA_DEBUGFS=y
 CONFIG_CMA_SYSFS=y
 CONFIG_CMA_AREAS=16
+# CONFIG_SPECULATIVE_PAGE_FAULT is not set
 CONFIG_READ_ONLY_THP_FOR_FS=y
 CONFIG_ANON_VMA_NAME=y
 CONFIG_LRU_GEN=y
